# ece175b-final-project

./: .gitignore  README.md  pyproject.toml  train.py
configs/: anchor_sweep_16k.yaml  anchor_sweep_1k.yaml  anchor_sweep_256k.yaml  anchor_sweep_4k.yaml  anchor_sweep_64k.yaml  arm_a.yaml  arm_b.yaml  arm_c.yaml  arm_c_long.yaml  arm_d.yaml  cd_headline.yaml  default.yaml  wikiart_headline.yaml  wikiart_v2.yaml
scripts/: _calib_probe.py  anchor_sweep.py  compute_fid_all.py  curl_sweep.py  eval_wikiart.py  make_wikiart_figure.py  reproduce_baseline.sh  reproduce_cd.sh  run_ablation.sh  run_curl_diagnostic.sh  run_final.sh  run_headline.sh  run_sweep_resume.sh  sample.py  smoke_test.py  stop_headline.sh
src/: __init__.py  trainer.py
src/eval/: __init__.py  curl.py  fid.py
src/kernels/: __init__.py  base.py  gaussian.py  laplacian.py
src/losses/: __init__.py  log_kde.py  mse_field.py
src/models/: perceptual.py  unet.py
src/train/: __init__.py  ema.py  lr_schedule.py
